# CanHap501_writely

./: .gitattributes  .gitignore  Makefile  Pantograph.java  README.md  files_list.csv  pyproject.toml  requirements.txt
data/: data_plotting-checkpoint.ipynb
data/pid_0>hc_0/: 4-16-12.csv
plots/Path_plot/: Path_plot.pde
sketch_haptics_guidence/: Alphabet.pde  AlphabetCreator.pde  Calculator.pde  Study.pde  data_write.pde  physics.pde  sketch_haptics_guidence.pde
sketch_preasure_sensor/: sketch_preasure_sensor.pde
sketch_ui/: Alphabet.pde  sketch_ui.pde  sketch_ui.pde_old
sketch_ui_bradley/: Calculator.pde
sketch_vertext_letters/: Alphabet.pde  sketch_vertext_letters.pde
test/: Makefile  Test_Phidget.java  test_phidget.py
