[tool.poetry]
name = "canhap501_writely"
version = "0.1.0"
description = "CanHap project: Writely, a haply based wiriting guiding system."
authors = ["Ahmed Shariff <shariff.mfa@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.7"
processing-config = {git = "https://github.com/ahmed-shariff/processing_config"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
